// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoList 组件 数据isChecked全为true时样式渲染正常 1`] = `
<div
  className="do-list"
>
  <div
    className="do-list-title"
  >
    已经完成
    <div
      className="do-list-count"
      data-test="count"
    >
      1
    </div>
  </div>
  <ul
    className="do-list-ul"
  >
    <li
      className="do-list-item"
      data-test="do-list-item"
      key="0"
    >
      <span>
        jest
      </span>
    </li>
  </ul>
</div>
`;

exports[`DoList 组件 数据isChecked全为true时样式渲染正常 2`] = `
<div
  className="do-list"
>
  <div
    className="do-list-title"
  >
    已经完成
    <div
      className="do-list-count"
      data-test="count"
    >
      1
    </div>
  </div>
  <ul
    className="do-list-ul"
  />
</div>
`;

exports[`DoList 组件 数据为空时样式渲染正常 1`] = `
<div
  className="do-list"
>
  <div
    className="do-list-title"
  >
    已经完成
    <div
      className="do-list-count"
      data-test="count"
    >
      0
    </div>
  </div>
  <ul
    className="do-list-ul"
  />
</div>
`;

exports[`DoList 组件 样式渲染正常 1`] = `
<DoList
  list={
    Array [
      Object {
        "isChecked": true,
        "isFocus": true,
        "value": "jest",
      },
      Object {
        "isChecked": true,
        "isFocus": true,
        "value": "TDD",
      },
      Object {
        "isChecked": false,
        "isFocus": false,
        "value": "react",
      },
    ]
  }
>
  <div
    className="do-list"
  >
    <div
      className="do-list-title"
    >
      已经完成
      <div
        className="do-list-count"
        data-test="count"
      >
        3
      </div>
    </div>
    <ul
      className="do-list-ul"
    >
      <li
        className="do-list-item"
        data-test="do-list-item"
        key="0"
      >
        <span>
          jest
        </span>
      </li>
      <li
        className="do-list-item"
        data-test="do-list-item"
        key="1"
      >
        <span>
          TDD
        </span>
      </li>
    </ul>
  </div>
</DoList>
`;
